# Streetviewdownloader

./: .gitignore  README.md  gui.py  pyproject.toml
svdownloader/: __init__.py  __main__.py  area.py  cli.py  exif_writer.py  metadata.py  models.py  projection.py  route.py  stitcher.py  tile_extractor.py  tiles.py  utils.py
